[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "dotenv>=0.9.9",
    "openai-agents>=0.0.4",
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]
